# CodeWhisper

./: CONTRIBUTING.md  README.md  README_OLD.md  TEST_REPORT.md  pyproject.toml  requirements.txt  setup.py  test_functionality.py
codewhisper/: __init__.py  cli.py  config.py
codewhisper/interaction/: chatbot.py  context.py  interface.py
codewhisper/providers/: __init__.py  base.py  claude.py  cohere.py  deepseek.py  ernie.py  gemini.py  glm.py  huggingface.py  mistral.py  mock.py  moonshot.py  openai.py  qwen.py
codewhisper/recommendation/: __init__.py  question_generator.py
codewhisper/scanner/: __init__.py  master_agent.py  sub_agent.py  task_queue.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md
examples/: chatbot_example.py  interface_example.py  question_generator_example.py
nochatbot/: __init__.py  cli.py  config.py
nochatbot/interaction/: __init__.py  chatbot.py  context.py  interface.py
nochatbot/providers/: __init__.py  claude.py  deepseek.py  openai.py
nochatbot/recommendation/: __init__.py  question_generator.py
nochatbot/scanner/: __init__.py  file_discovery.py  master_agent.py  sub_agent.py
tests/: __init__.py  test_question_generator.py
